deploy: d5bc3bf1c112c536b1bcbedd994ffa3a14a528cb

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 <img src=https://tomfbush.github.io/images/icon.png class=rounded-full alt=Avatar>
 </div>
 <div class="flex-grow mt-4 md:mt-0">
-<div class="text-3xl py-4">Example Author</div>
+<div class="text-3xl py-4">Tom Bush</div>
 <div class="w-3/12 xl:w-2/12 border-b"></div>
 <div class="flex items-center pt-4">
 <i class="fas fa-user"></i>
 <div class="flex flex-wrap">
-<span class=pl-4>Example Role</span>
+<span class=pl-4>Data analysis, SEO and data science</span>
 <a href=https://example.com/ class=pl-4>Example Organization</a>
 </div>
 </div>
